@@ -826,6 +826,12 @@
 					RelativePath="RenameDlg.h">
 				</File>
 				<File
+					RelativePath=".\RepoCreateDlg.cpp">
+				</File>
+				<File
+					RelativePath=".\RepoCreateDlg.h">
+				</File>
+				<File
 					RelativePath=".\RevertDlg.cpp">
 				</File>
 				<File
