@@ -1,5 +1,6 @@
 - ADD: The path to client certificates and the client
        certificate password can now be saved. (Stefan)
+- CHG: improved dialog for creating repositories. (Stefan)
 
 Version 1.1.0
 - ADD: Width marker for log messages. (Stefan)
